<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/edit_deadline_activity"
    tools:context="com.example.emmamalysz.killddl.EditDeadlineActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:text="Time" />

            <TimePicker
                android:id="@+id/timePicker1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:timePickerMode="spinner" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:text="Title" />

            <EditText
                android:id="@+id/deadlineName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"

                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:text="Description" />

            <EditText
                android:id="@+id/deadlineDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:text="Color" />

            <Spinner
                android:id="@+id/color_spinner"
                android:layout_width="fill_parent"

                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:text="Priority" />


            <LinearLayout
                android:id="@+id/priority0"
                android:layout_width="match_parent"
                android:layout_height="15dp">

                <TextView
                    android:id="@+id/priority1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Low"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/priority2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Medium"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/priority3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:gravity="center"
                    android:text="High"
                    android:textSize="10sp" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/priority"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:max="2"
                android:progress="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:text="Notification" />

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="15dp">

                <TextView
                    android:id="@+id/txtSize1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="None"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/txtSize_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="2 days"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/txtSize_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:gravity="center"
                    android:text="1 week"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/txtSize4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="2 weeks"
                    android:textSize="10sp" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/notification"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:max="3"
                android:progress="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:text="Frequency" />

            <LinearLayout
                android:id="@+id/Freq"
                android:layout_width="match_parent"
                android:layout_height="15dp">

                <TextView
                    android:id="@+id/NoneFreq"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="None"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/DailyFreq"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Daily"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/WeeklyFreq"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:gravity="center"
                    android:text="Weekly"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/MonthlyFreq"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:gravity="center"
                    android:text="Monthly"
                    android:textSize="10sp" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/frequency"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:max="3"
                android:progress="1" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/addDeadline"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/colorAccent"
                android:text="Add Deadline"
                android:textColor="@android:color/white"
                android:textSize="15dp"></android.support.v7.widget.AppCompatButton>


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
