...
        android:layout_height="wrap_content">


        <com.github.sundeepk.compactcalendarview.CompactCalendarView

            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/calendarView"
            android:layout_width="fill_parent"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_height="220dp"
            app:compactCalendarTargetHeight="250dp"
            app:compactCalendarTextSize="12sp"
...
